@@ -1,2 +1,2 @@
 #
-__version__ = '2.4.0.dev6'
+__version__ = '2.4.0.dev7'
